--- a/Website/style.css
+++ b/Website/style.css
@@ -1,3 +1,8 @@
+:root {
+    --bg-x: 1px;
+    --bg-y: 1px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -73,4 +78,5 @@ body {
     background-color: #1b1b1d;
     background-image: radial-gradient(circle at 1px 1px, #3f3f3f 1px, transparent 0);
     background-size: 20px 20px;
+    background-position: var(--bg-x) var(--bg-y);
 }
